# libsysstat

./: CMakeLists.txt  README.md  clean-all.cmake
include/: netcat.h
lib/sysstat/: CMakeLists.txt
lib/sysstat/include/: rd_sensors.h  rd_stats.h  sa.h  saf.h  version.h
lib/sysstat/misc/: sadf.c
lib/sysstat/src/: activity.c  common.c  format.c  json_stats.c  saf.c  saf_misc.c
scripts/: disable.bash  enable.bash  install.bash  uninstall.bash
src/: main.c  main.cpp  netcat.c
